// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`envCommand should fail with no value 1`] = `
Object {
  "errorCode": "E_NO_ENV_VALUE",
  "errorParams": Array [
    "NODE_ENV",
  ],
  "logCalls": Array [],
  "promptArgsCalls": Array [
    Array [],
  ],
}
`;

exports[`envCommand should work 1`] = `
Object {
  "logCalls": Array [
    Array [
      "info",
      "test",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;

exports[`envCommand should work with a default value 1`] = `
Object {
  "logCalls": Array [
    Array [
      "info",
      "lol",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;
